# SPPRC-PARALLEL

./: CMakeLists.txt  LICENSE  README.md  r_c_shortest_paths_parallel.hpp  test.cpp
data/: net.txt  node.txt
